# adapter

./: Cargo.toml  LICENSE  RAMBLINGS.md  README.md  flake.nix
.github/workflows/: check.yml  scheduled.yml  test.yml
adapter/: Cargo.toml
adapter-extism/: Cargo.toml
adapter-extism/examples/: main.rs
adapter-extism/src/: lib.rs
adapter-libloading/: Cargo.toml
adapter-libloading/src/: lib.rs
adapter-mlua/: Cargo.toml
adapter-mlua/src/: lib.rs
adapter/src/: lib.rs
examples/extism/: main.rs
examples/libloading/: main.rs
examples/mlua/: main.rs
src/: extism.rs  lib.rs  main.rs
tests/: combined.rs  main.rs
tests/extism_adapter/: main.rs  mod.rs
tests/libloading_adapter/: main.rs  mod.rs
tests/mlua_adapter/: main.rs  mod.rs
