[package]
name = "adapter-extism"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["adapter", "plugin", "generic", "wasm" , "extism"]
authors = ["Samuel Cobb"]
repository = "https://github.com/sjcobb2022/adapter"
homepage = "https://github.com/sjcobb2022/adapter"
description = """An Adapter for adapting the Extism library to the Adapter API."""
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
adapter = { version = "0.1.1", path = "../adapter" }
extism = "1.4.1"
