[package]
name = "adapter-libloading"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["adapter", "plugin", "generic", "libloading", "dynamic", "dynamic-library", "dynamic-linking", "dynamic-linking-library", "dynamic-loading", "dynamic-loading-library", "dynamic-linking-and-loading", "dynamic-linking-and-loading-library"]
authors = ["Samuel Cobb"]
repository = "https://github.com/sjcobb2022/adapter"
homepage = "https://github.com/sjcobb2022/adapter"
description = """An Adapter for adapting the libloading library to the Adapter API."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter = { version = "0.1.0", path = "../adapter" }
libloading = "0.8.4"
