[package]
name = "adapter-mlua"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter = { version = "0.1.0", path = "../adapter" }
mlua = { version = "=0.9.6", features = ["lua54"] }
