[package]
name = "adapter-mlua"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter = { version = "0.1.0", path = "../adapter" }
# Locked version for MSRV 
mlua = { version = "0.9.9", features = ["lua54"] }
