[package]
name = "adapter-mlua"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["adapter", "plugin", "generic", "lua", "mlua"]
authors = ["Samuel Cobb"]
repository = "https://github.com/sjcobb2022/adapter"
homepage = "https://github.com/sjcobb2022/adapter"
description = """An Adapter for adapting the mlua library to the Adapter API."""
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adapter = { version = "0.2.0", path = "../adapter" }
# Locked version for MSRV 
mlua = { version = "0.9.9", features = ["lua54"] }
